--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@zadigetvoltaire/nuxt-gtm": "^0.0.13",
     "cypress": "13.15.0",
     "cypress-visual-regression": "^5.2.2",
-    "nuxt": "^3.8.2",
+    "nuxt": "3.10.1",
     "nuxt-simple-robots": "^4.0.0-rc.19",
     "nuxt-svgo": "^3.5.6",
     "patch-package": "^8.0.0",
@@ -26,10 +26,10 @@
     "sass": "^1.66.1"
   },
   "dependencies": {
-    "@abi-software/mapintegratedvuer": "1.12.0",
+    "@abi-software/mapintegratedvuer": "1.12.1",
     "@abi-software/plotcomponents": "^0.2.4",
     "@abi-software/plotdatahelpers": "^0.1.2",
-    "@abi-software/simulationvuer": "2.0.14",
+    "@abi-software/simulationvuer": "2.0.17",
     "@element-plus/nuxt": "^1.0.10",
     "@nuxtjs/sitemap": "^5.1.4",
     "@pinia-plugin-persistedstate/nuxt": "^1.2.0",
@@ -39,7 +39,7 @@
     "axios": "^1.5.0",
     "chart.js": "^4.4.1",
     "chartjs-plugin-datalabels": "^2.2.0",
-    "contentful": "^10.5.1",
+    "contentful": "10.6.21",
     "date-fns": "^2.30.0",
     "gridstack": "^10.1.2",
     "isomorphic-dompurify": "^1.9.0",
@@ -52,7 +52,7 @@
     "plyr": "^3.7.8",
     "postscribe": "^2.0.8",
     "ramda": "^0.29.0",
-    "sparc-dashboard-beta": "^0.2.0",
+    "sparc-dashboard-beta": "0.2.0",
     "sparc-design-system-components-2": "1.0.1",
     "striptags": "^3.2.0",
     "uint8array-extras": "^1.0.0",
