--- a/package.json
+++ b/package.json
@@ -49,13 +49,12 @@
     "lodash": "^4.17.21",
     "marked": "^8.0.1",
     "mitt": "^3.0.1",
-    "pennsieve-dashboard": "0.1.4",
+    "pennsieve-dashboard": "^0.1.7",
     "plotly.js": "2.35.3",
     "plyr": "^3.7.8",
     "postscribe": "^2.0.8",
-    "precision-dashwidgets": "0.2.2",
+    "precision-dashwidgets": "0.3.4",
     "ramda": "^0.29.0",
-    "sparc-dashboard-beta": "^0.2.0",
     "sparc-design-system-components-2": "1.0.1",
     "striptags": "^3.2.0",
     "uint8array-extras": "^1.0.0",
